[package]
name = "gobject"
version = "0.1.0"
edition = "2021"

[features]
gtk4_macros = ["gtk4", "gobject-macros/gtk4"]
gio_macros = ["gio"]
serde_macros = ["serde", "gobject-macros/serde"]

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", optional = true }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.5", optional = true }
gobject-macros = { path = "macros" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
gobject-serde = { path = "serde" }
serde_json = "1"

[workspace]
members = ["core", "clone-blockify", "macros", "serde"]
