[package]
name = "gobject"
version = "0.1.0"
edition = "2021"

[features]
default = ["variant"]
use_cairo = ["cairo"]
use_gdk4 = ["gdk4"]
use_gio = ["gio", "gobject-macros/gio"]
use_graphene = ["graphene"]
use_gst = ["gst", "once_cell", "gobject-macros/use_gst"]
use_gsk4 = ["gsk4"]
use_gtk4 = ["gtk4", "gobject-macros/gtk4"]
use_serde = ["serde", "gobject-macros/serde"]
variant = ["gobject-macros/variant"]

[dependencies]
async-trait = "0.1.53"
cairo = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", package = "cairo-rs", optional = true }
gdk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.5", optional = true }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", optional = true }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", features = ["v2_68"] }
graphene = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", package = "graphene-rs", optional = true }
gsk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.5", optional = true }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.5", optional = true }
gst = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer", optional = true }
gobject-macros = { path = "macros" }
serde = { version = "1", features = ["derive"], optional = true }
once_cell = { version = "1.0", optional = true }

[dev-dependencies]
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
gobject-serde = { path = "serde" }
serde_json = "1"

[workspace]
members = ["core", "clone-blockify", "macros", "serde"]
