[package]
name = "clone-blockify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clone-blockify"
path = "main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
derive-new = "0.5.9"
futures-util = "0.3.21"
ignore = "0.4.18"
proc-macro2 = { version = "1.0.36", features = ["span-locations"] }
quote = "1.0.16"
syn = { version = "1.0.89", features = ["full", "visit"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
