[package]
name = "gobject-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[features]
use_gst = ["gst"]

[dependencies]
bitflags = "1.3.2"
darling = "0.13.1"
heck = "0.4.0"
proc-macro2 = "1.0.36"
quote = "1.0.16"
syn = { version = "1.0.89", features = ["full", "visit-mut"], default-features = false }
gst = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer", optional = true }
