[package]
name = "gobject-macros"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

[features]
gtk4 = []
serde = []

[dependencies]
darling = "0.13.1"
gobject-core = { path = "../core" }
proc-macro2 = "1.0.36"
proc-macro-crate = "1.1.3"
proc-macro-error = "1.0.4"
quote = "1.0.16"
syn = { version = "1.0.89", default-features = false }

