[package]
name = "gobject-macros"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

[features]
gio = []
use_gst = ["gst", "gobject-core/use_gst"]
gtk4 = ["quick-xml"]
serde = []
variant = []

[dependencies]
darling = "0.13.1"
gobject-core = { path = "../core" }
heck = "0.4.0"
proc-macro2 = "1.0.36"
proc-macro-crate = "1.1.3"
proc-macro-error = "1.0.4"
quick-xml = { version = "0.22.0", optional = true }
quote = "1.0.16"
syn = { version = "1.0.89", default-features = false }
gst = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer", optional = true }
