[package]
name = "gobject-serde"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[features]
use_cairo = ["cairo"]
use_gdk4 = ["gdk4"]
use_gio = ["gio"]
use_graphene = ["graphene"]
use_gsk4 = ["gsk4"]
use_gtk4 = ["gtk4"]

[dependencies]
cairo = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", package = "cairo-rs", optional = true }
gdk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.5", optional = true }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", optional = true }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", features = ["v2_68"] }
graphene = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.16", package = "graphene-rs", optional = true }
gsk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.5", optional = true }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.5", optional = true }
serde = { version = "1.0.136", features = ["derive"]}
